<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#19202A"
    android:orientation="vertical">

    <include layout="@layout/layout_nav_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_push_notification"
            android:layout_width="match_parent"
            android:layout_height="@dimen/post_title_edit_height"
            android:layout_marginTop="@dimen/edit_profile_layout_padding"
            android:background="@drawable/post_item_back"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_push_notification"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/post_item_back"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/post_category_text_padding_left"
                android:text="@string/push_notifications"
                android:textColor="#555556"
                android:textSize="@dimen/post_category_button_text_size" />

            <ToggleButton
                android:id="@+id/toggle_push_notifications"
                style="@style/toggleButton"
                android:layout_width="@dimen/toggle_button_width"
                android:layout_height="@dimen/toggle_button_height"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="@dimen/post_layout_padding"
                android:background="@drawable/ic_toggle_bg"
                android:checked="true"
                android:soundEffectsEnabled="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_feedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/post_option_layout_height"
            android:layout_marginTop="@dimen/edit_profile_layout_padding"
            android:background="@drawable/two_lines_back"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_send_feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_title_edit_height"
                android:background="@drawable/post_category"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/post_category_text_padding_left"
                android:text="@string/send_feedback"
                android:textColor="#555556"
                android:textSize="@dimen/post_category_button_text_size" />

            <Button
                android:id="@+id/btn_rate_us"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_title_edit_height"
                android:background="@drawable/post_category"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/post_category_text_padding_left"
                android:text="@string/rate_us"
                android:textColor="#555556"
                android:textSize="@dimen/post_category_button_text_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="@dimen/post_title_edit_height"
            android:layout_marginTop="@dimen/edit_profile_layout_padding"
            android:background="@drawable/post_item_back"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_title_edit_height"
                android:background="@android:color/transparent"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/post_category_text_padding_left"
                android:text="@string/clear_cache"
                android:textColor="#555556"
                android:textSize="@dimen/post_category_button_text_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_help"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_three_line_field_height"
            android:layout_marginTop="@dimen/edit_profile_layout_padding"
            android:background="@drawable/three_lines_back"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_title_edit_height"
                android:background="@drawable/post_category"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/post_category_text_padding_left"
                android:text="@string/privacy_policy"
                android:textColor="#555556"
                android:textSize="@dimen/post_category_button_text_size" />

            <Button
                android:id="@+id/btn_term_of_use"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_title_edit_height"
                android:background="@drawable/post_category"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/post_category_text_padding_left"
                android:text="@string/terms_of_use"
                android:textColor="#555556"
                android:textSize="@dimen/post_category_button_text_size" />

            <Button
                android:id="@+id/btn_faq"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_title_edit_height"
                android:background="@drawable/post_category"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/post_category_text_padding_left"
                android:text="@string/faq"
                android:textColor="#555556"
                android:textSize="@dimen/post_category_button_text_size" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_button_height"
        android:layout_marginTop="@dimen/post_share_button_margin_top"
        android:background="@drawable/btn_logout_bg" />

</LinearLayout>
