<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/landing_layout_root_paddingBottom"
    android:paddingLeft="@dimen/landing_layout_root_paddingLeft"
    android:paddingRight="@dimen/landing_layout_root_paddingRight"
    android:paddingTop="@dimen/landing_layout_root_paddingTop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="@dimen/landing_image_logo_width"
            android:layout_height="@dimen/landing_image_logo_height"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cd_logo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="@dimen/landing_text_welcome_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/landing_text_welcome_topMargin"
            android:gravity="center_horizontal"
            android:text="@string/landing_welcome_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/landing_text_welcome_font_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_social"
            android:layout_width="@dimen/landing_text_social_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/landing_text_social_bottomMargin"
            android:gravity="center_horizontal"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/landing_social_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/landing_text_social_font_size" />

        <Button
            android:id="@+id/button_facebook"
            android:layout_width="@dimen/landing_button_facebook_width"
            android:layout_height="@dimen/landing_button_facebook_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/landing_button_facebook_bottomMargin"
            android:background="@drawable/btn_facebook_bg" />

        <Button
            android:id="@+id/button_twitter"
            android:layout_width="@dimen/landing_button_twitter_width"
            android:layout_height="@dimen/landing_button_twitter_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/landing_button_twitter_bottomMargin"
            android:background="@drawable/btn_twitter_bg" />

        <TextView
            android:id="@+id/text_never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/landing_text_never_bottomMargin"
            android:text="@string/landing_never_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/landing_text_never_font_size" />

        <TextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/landing_text_or_bottomMargin"
            android:text="@string/landing_or_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/landing_text_or_font_size"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_h_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/landing_view_h_line_bottomMargin"
            android:background="@color/landing_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="@dimen/landing_button_sign_up_width"
                android:layout_height="@dimen/landing_button_sign_up_height"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_signup_bg"
                android:scaleType="fitXY" />

            <View
                android:id="@+id/view_v_line"
                android:layout_width="1dp"
                android:layout_height="@dimen/landing_view_v_line_height"
                android:layout_centerHorizontal="true"
                android:background="@color/landing_line" />

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="@dimen/landing_button_sign_in_width"
                android:layout_height="@dimen/landing_button_sign_in_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_signin_bg"
                android:scaleType="fitXY" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
