<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#19202A"
    android:orientation="vertical">

    <include layout="@layout/layout_nav_title_bar" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/layout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/edit_profile_layout_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#23232A"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#424242" />

                <LinearLayout
                    android:id="@+id/layout_photo_and_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/post_layout_image_padding_top"
                    android:paddingLeft="@dimen/post_layout_padding"
                    android:paddingRight="@dimen/post_layout_padding"
                    android:paddingTop="@dimen/post_layout_image_padding_top">

                    <com.parse.ParseImageView
                        android:id="@+id/image_user_photo"
                        android:layout_width="@dimen/post_image_size"
                        android:layout_height="@dimen/post_image_size"
                        android:adjustViewBounds="true"
                        android:src="@drawable/profile_photo_default" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.iliayugai.skilled.widget.Emojicon.EmojiconEditText
                            android:id="@+id/edit_about"
                            style="@style/myBlackEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/post_content_edit_margin_left"
                            android:background="@android:color/transparent"
                            android:gravity="start"
                            android:hint="@string/about_me"
                            android:maxLength="45"
                            android:textColorHint="#545454"
                            android:textSize="@dimen/edit_profile_edit_about_me_font_size" />

                        <TextView
                            android:id="@+id/text_about_length"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:text="45"
                            android:textColor="@color/tint_color"
                            android:textSize="@dimen/post_text_content_length_font_size" />

                    </RelativeLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#424242" />

            </LinearLayout>

            <com.iliayugai.skilled.widget.Emojicon.EmojiconEditText
                android:id="@+id/edit_full_name"
                style="@style/myBlackEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_title_edit_height"
                android:layout_marginTop="@dimen/edit_profile_layout_margin_top"
                android:gravity="center_vertical"
                android:hint="@string/fullname"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:paddingLeft="@dimen/post_layout_padding"
                android:paddingRight="@dimen/post_layout_padding"
                android:textColorHint="#545454"
                android:textSize="@dimen/post_title_edit_size" />

            <EditText
                android:id="@+id/edit_location"
                style="@style/myBlackEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_title_edit_height"
                android:layout_marginTop="@dimen/edit_profile_layout_margin_top"
                android:gravity="center_vertical"
                android:hint="@string/location"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:paddingLeft="@dimen/post_layout_padding"
                android:paddingRight="@dimen/post_layout_padding"
                android:textColorHint="#545454"
                android:textSize="@dimen/post_title_edit_size" />

            <LinearLayout
                android:id="@+id/layout_set_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_title_edit_height"
                android:layout_marginTop="@dimen/edit_profile_layout_margin_top"
                android:background="@drawable/post_item_back">

                <Button
                    android:id="@+id/btn_set_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/post_category_text_padding_left"
                    android:text="@string/set_profile_background"
                    android:textColor="#555556"
                    android:textSize="@dimen/post_category_button_text_size" />

            </LinearLayout>

            <com.iliayugai.skilled.widget.Emojicon.EmojiconTextView
                android:id="@+id/text_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_title_edit_height"
                android:layout_marginTop="@dimen/edit_profile_layout_margin_top"
                android:background="@drawable/post_item_back"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/post_category_text_padding_left"
                android:text="@string/username"
                android:textColor="#555556"
                android:textSize="@dimen/post_category_button_text_size" />

            <LinearLayout
                android:id="@+id/layout_change_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_title_edit_height"
                android:layout_marginTop="@dimen/post_layout_category_margin_top"
                android:background="@drawable/post_item_back">

                <Button
                    android:id="@+id/btn_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/post_category"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/post_category_text_padding_left"
                    android:text="@string/change_password"
                    android:textColor="#555556"
                    android:textSize="@dimen/post_category_button_text_size" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_update_it"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_button_height"
        android:background="@drawable/btn_update_it_bg" />

</LinearLayout>
